{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 275,
  "lineage": "69516034-aa89-327c-b9dc-d3acade8fdcf",
  "resources": [
    {
      "module": "module.head_node",
      "mode": "managed",
      "type": "aws_eip",
      "name": "head_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09c44c2ff22376f7e",
            "arn": "arn:aws:ec2:us-east-1:728035103044:elastic-ip/eipalloc-09c44c2ff22376f7e",
            "association_id": "eipassoc-03ccf6ea96ecc250f",
            "domain": "vpc",
            "id": "eipalloc-09c44c2ff22376f7e",
            "instance": "i-0ea6d749017e704af",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c11d5a776054fddf",
            "private_dns": "ip-10-0-1-8.ec2.internal",
            "private_ip": "10.0.1.8",
            "public_dns": "ec2-100-48-122-172.compute-1.amazonaws.com",
            "public_ip": "100.48.122.172",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "titan-non-prod-head-node-eip"
            },
            "tags_all": {
              "Environment": "non-prod",
              "ManagedBy": "terraform",
              "Name": "titan-non-prod-head-node-eip",
              "Namespace": "titan",
              "Project": "hpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.head_node",
      "mode": "managed",
      "type": "aws_instance",
      "name": "head_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05024c2628f651b80",
            "arn": "arn:aws:ec2:us-east-1:728035103044:instance/i-0ea6d749017e704af",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "titan-non-prod-head-node-profile",
            "id": "i-0ea6d749017e704af",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "titan-non-prod-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c11d5a776054fddf"
              }
            ],
            "primary_network_interface_id": "eni-0c11d5a776054fddf",
            "private_dns": "ip-10-0-1-8.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.8",
            "public_dns": "ec2-100-48-122-172.compute-1.amazonaws.com",
            "public_ip": "100.48.122.172",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:728035103044:key/3ae02c27-83c8-4251-8851-362bae526425",
                "tags_all": {
                  "Environment": "non-prod",
                  "ManagedBy": "terraform",
                  "Namespace": "titan",
                  "Project": "hpc"
                },
                "throughput": 125,
                "volume_id": "vol-0560741688a7b1098",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05fc30c9c3f5fd4a8",
            "tags": {
              "Name": "titan-non-prod-head-node"
            },
            "tags_all": {
              "Environment": "non-prod",
              "ManagedBy": "terraform",
              "Name": "titan-non-prod-head-node",
              "Namespace": "titan",
              "Project": "hpc"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-082541b5ae951283a"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "728035103044",
            "id": "i-0ea6d749017e704af",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.hpc_key",
            "module.head_node.data.aws_ami.amazon_linux2",
            "module.iam.aws_iam_instance_profile.head_node",
            "module.iam.aws_iam_role.head_node",
            "module.network.aws_security_group.hpc_sg",
            "module.network.aws_security_group.login_sg",
            "module.network.aws_subnet.hpc_subnet",
            "module.network.aws_vpc.hpc_vpc",
            "random_password.slurm_db"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728035103044:internet-gateway/igw-00a05709a501a2a73",
            "id": "igw-00a05709a501a2a73",
            "owner_id": "728035103044",
            "region": "us-east-1",
            "tags": {
              "Name": "titan-non-prod-igw"
            },
            "tags_all": {
              "Environment": "non-prod",
              "ManagedBy": "terraform",
              "Name": "titan-non-prod-igw",
              "Namespace": "titan",
              "Project": "hpc"
            },
            "vpc_id": "vpc-0160e280d2dbedd32"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.hpc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hpc_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728035103044:route-table/rtb-044b309bad68552b7",
            "id": "rtb-044b309bad68552b7",
            "owner_id": "728035103044",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00a05709a501a2a73",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "titan-non-prod-rt"
            },
            "tags_all": {
              "Environment": "non-prod",
              "ManagedBy": "terraform",
              "Name": "titan-non-prod-rt",
              "Namespace": "titan",
              "Project": "hpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0160e280d2dbedd32"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "728035103044",
            "id": "rtb-044b309bad68552b7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.hpc_igw",
            "module.network.aws_vpc.hpc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hpc_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e62cf9eebf86bd4",
            "region": "us-east-1",
            "route_table_id": "rtb-044b309bad68552b7",
            "subnet_id": "subnet-05fc30c9c3f5fd4a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.hpc_igw",
            "module.network.aws_route_table.hpc_rt",
            "module.network.aws_subnet.hpc_subnet",
            "module.network.aws_vpc.hpc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hpc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728035103044:security-group/sg-082541b5ae951283a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082541b5ae951283a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "All from login node",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-052a758842ef90bd6"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Intra-cluster",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "SSH from login node only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-052a758842ef90bd6"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20260320152321524600000003",
            "name_prefix": "terraform-",
            "owner_id": "728035103044",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "titan-non-prod-sg"
            },
            "tags_all": {
              "Environment": "non-prod",
              "ManagedBy": "terraform",
              "Name": "titan-non-prod-sg",
              "Namespace": "titan",
              "Project": "hpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0160e280d2dbedd32"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "728035103044",
            "id": "sg-082541b5ae951283a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_security_group.login_sg",
            "module.network.aws_vpc.hpc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "login_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728035103044:security-group/sg-052a758842ef90bd6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052a758842ef90bd6",
            "ingress": [
              {
                "cidr_blocks": [
                  "72.181.0.35/32"
                ],
                "description": "SSH from operator",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20260320152318358700000001",
            "name_prefix": "terraform-",
            "owner_id": "728035103044",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "titan-non-prod-login-sg"
            },
            "tags_all": {
              "Environment": "non-prod",
              "ManagedBy": "terraform",
              "Name": "titan-non-prod-login-sg",
              "Namespace": "titan",
              "Project": "hpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0160e280d2dbedd32"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "728035103044",
            "id": "sg-052a758842ef90bd6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.hpc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hpc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728035103044:subnet/subnet-05fc30c9c3f5fd4a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fc30c9c3f5fd4a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728035103044",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "titan-non-prod-subnet"
            },
            "tags_all": {
              "Environment": "non-prod",
              "ManagedBy": "terraform",
              "Name": "titan-non-prod-subnet",
              "Namespace": "titan",
              "Project": "hpc"
            },
            "vpc_id": "vpc-0160e280d2dbedd32"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "728035103044",
            "id": "subnet-05fc30c9c3f5fd4a8",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.hpc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hpc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:728035103044:vpc/vpc-0160e280d2dbedd32",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c709d72e5e830123",
            "default_route_table_id": "rtb-06b04a5b98b715b60",
            "default_security_group_id": "sg-04d6a3038b98c54e9",
            "dhcp_options_id": "dopt-0ed0fc05b6c94432a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0160e280d2dbedd32",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06b04a5b98b715b60",
            "owner_id": "728035103044",
            "region": "us-east-1",
            "tags": {
              "Name": "titan-non-prod-vpc"
            },
            "tags_all": {
              "Environment": "non-prod",
              "ManagedBy": "terraform",
              "Name": "titan-non-prod-vpc",
              "Namespace": "titan",
              "Project": "hpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "728035103044",
            "id": "vpc-0160e280d2dbedd32",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}